@@ -1,4 +1,6 @@
-# Generic Makefile for bsopack
+# Makefile for Watcom C (OS/2)
+#
+# tested with Watcom C 11.0
 
 CC      = wcc386
 LINK    = wlink
